--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /FiapCloudGames/.vs/CopilotSnapshots/9ECCCF155000DB4AA8C3528D4178D995
+/.gitattributes
