--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,47 @@
-﻿################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
+# Ignore build results
+bin/
+obj/
 
-/FiapCloudGames/.vs/CopilotSnapshots/9ECCCF155000DB4AA8C3528D4178D995
-/.gitattributes
+# Ignore Visual Studio temporary files, user-specific files, and workspace settings
+.vs/
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+
+# Ignore Rider IDE files
+.idea/
+
+# Ignore Mac system files
+.DS_Store
+
+# Ignore logs
+*.log
+
+# Ignore test results
+TestResults/
+*.coverage
+*.coveragejson
+
+# Ignore publish output
+publish/
+out/
+
+# Ignore NuGet packages
+*.nupkg
+*.snupkg
+packages/
+
+# Ignore other common files
+*.db
+*.sqlite
+*.sqlite3
+
+# Ignore secrets and local settings
+secrets.json
+appsettings.Development.json
+
+# Ignore by default all files ending with ~ (backup files)
+*~
+
+# Add more rules as needed for your project
