--- a/FiapCloudGames/FiapCloudGames/appsettings.json
+++ b/FiapCloudGames/FiapCloudGames/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Infrastructure/FiapCloudGames.db"
+    //"DefaultConnection": "Data Source=Infrastructure/FiapCloudGames.db",
+    // "DefaultConnection": "Server=./;Database=DB_FiapCloudGames;User Id=sa;Password=123456;TrustServerCertificate=true"
+    "DefaultConnection": "Server=tcp:mmo-server.database.windows.net,1433;Initial Catalog=FiapCloudGamesDB;Persist Security Info=False;User ID=marcosoliveiraeu;Password=@Fiap123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*",
   "Jwt": {
@@ -23,6 +25,9 @@
     "Usuario": "usuario@dominio.com",
     "Senha": "senha",
     "Remetente": "no-reply@dominio.com"
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=xxxxx;IngestionEndpoint=https://brazilsouth-0.in.applicationinsights.azure.com/"
   }
 
 }
