--- a/FiapCloudGames/azure-pipelines.yml
+++ b/FiapCloudGames/azure-pipelines.yml
@@ -3,46 +3,80 @@ trigger:
     include:
       - main
 
+pool:
+  #name: self-hosted
+  vmImage: 'ubuntu-latest'
+  
 variables:
-  imageName: 'fcg-api'
+  imageName: 'fiapcloudgames-img'
   dockerRegistry: 'fiapcloudgamesacr.azurecr.io'
-  tag: '$(Build.BuildId)'
+  containerGroupName: 'api-fiapcloudgames'
+  resourceGroup: 'grupo3' 
+  location: 'westus2'           
+  containerPort: '8080'
 
 stages:
-- stage: BuildAndPush
-  displayName: Build Docker Image and Push to ACR
-  jobs:
-  - job: Build
-    pool: self-hosted
-    steps:
-    - task: UseDotNet@2
-      inputs:
-        packageType: 'sdk'
-        version: '8.0.x'
-    - script: |
-        echo "Building Docker image"
-        docker build -t $(dockerRegistry)/$(imageName):$(tag) .
-      displayName: Build Docker Image
-    - script: |
-        echo "Login and push to ACR"
-        docker login $(dockerRegistry) -u $(ACR_USERNAME) -p $(ACR_PASSWORD)
-        docker push $(dockerRegistry)/$(imageName):$(tag)
-      displayName: Push Docker Image
-      env:
-        ACR_USERNAME: $(ACR_USERNAME)
-        ACR_PASSWORD: $(ACR_PASSWORD)
+  - stage: Build
+    displayName: 'Build e Docker Image'
+    jobs:
+      - job: BuildAndPush
+        steps:
+          - task: UseDotNet@2
+            inputs:
+              packageType: 'sdk'
+              version: '8.0.x'
 
-- stage: Deploy
-  displayName: Deploy to Azure Web App
-  dependsOn: BuildAndPush
-  condition: succeeded()
-  jobs:
-  - job: DeployJob
-    pool: self-hosted
-    steps:
-    - task: AzureWebAppContainer@1
-      displayName: Deploy Container to Web App
-      inputs:
-        azureSubscription: 'FiapConnection'
-        appName: 'FiapCloudGamesApi'
-        containers: '$(dockerRegistry)/$(imageName):$(tag)'
+          - task: DotNetCoreCLI@2
+            inputs:
+              command: 'publish'
+              publishWebProjects: true
+              arguments: '--configuration Release --output $(Build.ArtifactStagingDirectory)'
+              zipAfterPublish: false
+
+          - task: Docker@2
+            displayName: 'Build Docker image'
+            inputs:
+              containerRegistry: 'FiapCloudGamesAcrConnection'
+              repository: $(imageName)
+              command: 'buildAndPush'
+              Dockerfile: '**/Dockerfile'
+              tags: |
+                latest
+                $(Build.BuildId)
+
+  - stage: Deploy
+    displayName: 'Deploy para Container Instance'
+    dependsOn: Build
+    jobs:
+      - job: DeployToACI
+        steps:
+          - task: AzureCLI@2
+            displayName: 'Atualiza Container Instance'
+            inputs:
+              azureSubscription: 'FiapConnection'
+              scriptType: 'bash'
+              scriptLocation: 'inlineScript'
+              inlineScript: |
+                az container delete \
+                  --name $(containerGroupName) \
+                  --resource-group $(resourceGroup) \
+                  --yes
+
+                az container create \
+                  --resource-group $(resourceGroup) \
+                  --name $(containerGroupName) \
+                  --image $(dockerRegistry)/$(imageName):latest \
+                  --registry-login-server $(dockerRegistry) \
+                  --registry-username $(ACR_USERNAME) \
+                  --registry-password $(ACR_PASSWORD) \
+                  --dns-name-label $(containerGroupName)-dns \
+                  --ports $(containerPort) \
+                  --cpu 1 \
+                  --memory 1.5 \
+                  --location $(location) \
+                  --log-analytics-workspace 'f8b4ac94-8c26-400f-bd9d-72bed52ed183' \
+                  --log-analytics-workspace-key 'wTb+fo5ts3l01JvUQq3bBT2qB/Oeqjv/6ft+Aavk7rdwv+L47PS8YWQl+HoUvMa/Y8ONHiDyU4721kuAYkoqfA=='\
+                  --os-type Linux
+            env:
+              ACR_USERNAME: $(ACR_USERNAME)
+              ACR_PASSWORD: $(ACR_PASSWORD)
